# brico

./: .gitignore  AGENTS.md  Claude.md  Procfile.dev  README.md  TODO.md  docker-compose.yml  package-lock.json  package.json  tailwind.config.js
docs/: AGENTS.md  Makefile  pyproject.toml
docs/sources/: README.md  conf.py
docs/sources/how-to/: README.md
docs/sources/references/: README.md  tailwind.md
webapp/: .authentication.AGENTS.md  .env.template  .gitignore  .permissions.AGENTS.md  .pre-commit-config.yaml  .secrets.baseline  .tool-versions  AGENTS.md  Makefile  Procfile.dev  README.md  TODO.md  authentication.AGENTS.md  criteria.py  db.sqlite3  env.AGENTS.md  hello_world.py  package-lock.json  package.json  permissions.AGENTS.md  pyproject.toml  tailwind.config.js  templates.AGENTS.md
webapp/agents-docs/: authentication.AGENTS.md  permissions.AGENTS.md
webapp/audits/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
webapp/audits/admin/: audit.py
webapp/audits/migrations/: 0001_initial.py  0002_alter_comment_comment.py  0002_alter_comment_comment_and_more.py  0002_conversation_message.py  0003_alter_projectauditcriterion_status.py  0003_projectaudit.py  0003_projectaudit_status.py  0004_alter_auditlibrary_organization.py  0004_projectauditcriterion_projectauditcriterioncomment_and_more.py  0005_add_session_id_to_prompt.py  0005_auditlibrarytag_auditlibrary_tags_criteriontag_and_more.py  0005_remove_tag_criteria_auditlibrary_tags_criterion_tags_and_more.py  0006_projectauditcriterionprompt_name.py  0007_alter_projectauditcriterion_status.py  0008_remove_message_conversation_delete_conversation_and_more.py
webapp/audits/models/: __init__.py  audit.py  chat.py
webapp/audits/prompts/: system_prompt.md
webapp/audits/templatetags/: markdown_filters.py
webapp/audits/tests/: factories.py  test_admin_import_export.py  test_forms.py  test_models.py  test_views.py
webapp/audits/tests/models/: test_audit.py
webapp/audits/tests/views/: test_audits.py  test_comment.py  test_criteria.py  test_mixin.py  test_project.py  test_projectaudit.py  test_projects.py  test_prompt.py  test_resource.py
webapp/audits/views/: audits.py  comment.py  criteria.py  mixin.py  project.py  projectaudit.py  projectauditcriterion.py  projects.py  prompt.py  resource.py  tests.py
webapp/brico/: apps.py
webapp/brico/tests/: test_views.py
webapp/core/: context_processors.py  middleware.py  settings.py  urls.py  user_registration_serializer.py  views.py
webapp/core/templatetags/: tiles_tags.py
webapp/core/tests/: test_context_processors.py  test_middleware.py  test_views.py
webapp/locale/fr/LC_MESSAGES/: django.mo  django.po
webapp/organization/: mixins.py  permissions.py  settings_urls.py  urls.py  views.py
webapp/organization/admin/: __init__.py  organization.py
webapp/organization/fixtures/: auth.json  content_type.json  roles.json
webapp/organization/migrations/: 0001_initial.py  0002_alter_organization_description_and_more.py  0003_alter_project_description_alter_project_name.py  0003_role_organizationmember_role.py
webapp/organization/models/: organization.py
webapp/organization/tests/: factories.py  test_admin.py  test_models.py  test_permissions.py  test_views.py
webapp/organization/views/: __init__.py  organization.py  settings.py
webapp/static/to_compile/controllers/: audit_library_tags_controller.ts  auto_submit_controller.ts  chat.ts  choose-criterion.ts  dropdown_controller.ts  prompt_form_controller.ts  tag_select_controller.ts
webapp/static/to_compile/css/: base.css  blocks.css  buttons.css  cards.css  danger-zone.css  dropdown.css  footers.css  forms.css  headers.css  kpi-bar.css  links.css  main.css  markdown-zone.css  project-tiles.css  signup-login.css  tiles.css  tooltip.css  typography.css
webapp/static/to_compile/entrypoints/: main.css  main.ts
webapp/templates/: dashboard.html  index.html
webapp/templates/account/: login.html  password_reset.html  password_reset_done.html  password_reset_from_key_done.html  signup.html
webapp/templates/audits/: audit_detail.html  chat.html  chat_list.html  comment_confirm_delete.html  comment_form.html  comment_item.html  comments_list.html  criterion_detail.html  current_prompt.html  foobar.html  new_audit.html  new_project.html  project_detail.html  project_list.html  prompt.html
webapp/templates/audits/comment/: confirm_delete.html  form.html  form_empty.html  item.html  list.html
webapp/templates/audits/components/: prompt_form.html
webapp/templates/audits/project/: confirm_delete.html  detail.html  edit.html  list.html  new.html
webapp/templates/audits/projectaudit/: confirm_archive.html  confirm_delete.html  detail.html  new.html
webapp/templates/audits/projectauditcriterion/: detail.html
webapp/templates/audits/prompt/: detail.html  form.html  kpi-bar.html
webapp/templates/audits/resource/: confirm_delete.html  detail.html  edit.html  new.html
webapp/templates/components/: audit_library_tags_widget.html  input_tags.html  messages.html  search.html  sidebar.html  tiles.html
webapp/templates/layout/: base-logged.html  base.html  center_base.html
webapp/templates/organization/: organization_create.html
webapp/templates/organization/components/: dropdown_choose_organization.html
webapp/templates/settings/audit_library/: confirm_delete.html  edit.html  list.html
webapp/templates/settings/member/: list.html
webapp/templates/settings/organization/: edit.html
webapp/templates/socialaccount/: authentication_error.html  connections.html  login.html  login_cancelled.html  signup.html
webapp/webapp/: settings.py
(+42 files in other folders)
