[project]
name = "docs"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "detect-secrets>=1.5.0,<2",
    "furo>=2025.7.19,<2026",
    "myst-parser>=4.0.0,<5",
    "sphinx>=8.1.3,<9",
    "sphinxcontrib-mermaid>=1.0.0,<2",
]
